# backend/model/model_individual_schedule.go
@@ -1,0 +1,20 @@
+/*
+ * Scheduler API
+ *
+ * Basic API for retrieving schedules, based on a ScheduleInput object.
+ *
+ * API version: 0.0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package model
+
+// IndividualSchedule - Represents the work schedule of an individual assistant.
+type IndividualSchedule struct {
+
+	// The identification number of the assistant for which this is an individual schedule.
+	AssistantId int32 `json:"assistant_id,omitempty"`
+
+	// An array as long as the number of days of this schedule. Contains all the assignments that have been scheduled to this assistant.
+	Assignments []ShiftType `json:"assignments,omitempty"`
+}
