# backend/model/model_model_parameters_fairness_shift_weights.go
@@ -1,0 +1,18 @@
+/*
+ * Scheduler API
+ *
+ * Basic API for retrieving schedules, based on a ScheduleInput object.
+ *
+ * API version: 0.0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package model
+
+// ModelParametersFairnessShiftWeights - A shift type - weight pair that specifies the weight each shift type should have in the model.
+type ModelParametersFairnessShiftWeights struct {
+	ShiftType ShiftType `json:"shift_type,omitempty"`
+
+	// The weight of this shift type
+	Weight float32 `json:"weight,omitempty"`
+}
