# backend/model/model_schedule.go
@@ -1,0 +1,24 @@
+/*
+ * Scheduler API
+ *
+ * Basic API for retrieving schedules, based on a ScheduleInput object.
+ *
+ * API version: 0.0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package model
+
+// Schedule - Holds all data of a generated schedule.
+type Schedule struct {
+
+	// The number of days for which this schedule is generated.
+	NbDays int32 `json:"nb_days,omitempty"`
+
+	// The assistants involved in this schedule.
+	Assistants []Assistant `json:"assistants,omitempty"`
+
+	ShiftTypes ShiftType `json:"shift_types,omitempty"`
+
+	IndividualSchedules []IndividualSchedule `json:"individual_schedules,omitempty"`
+}
