# backend/server/api.go
@@ -1,0 +1,34 @@
+/*
+ * Scheduler API
+ *
+ * Basic API for retrieving schedules, based on a ScheduleInput object.
+ *
+ * API version: 0.0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import (
+	"context"
+	"net/http"
+
+	"github.com/jorensjongers/scheduler/backend/model"
+)
+
+// DefaultApiRouter defines the required methods for binding the api requests to a responses for the DefaultApi
+// The DefaultApiRouter implementation should parse necessary information from the http request,
+// pass the data to a DefaultApiServicer to perform the required actions, then write the service results to the http response.
+type DefaultApiRouter interface {
+	ScheduleGet(http.ResponseWriter, *http.Request)
+	SetModelParamsPost(http.ResponseWriter, *http.Request)
+}
+
+// DefaultApiServicer defines the api actions for the DefaultApi service
+// This interface intended to stay up to date with the openapi yaml used to generate it,
+// while the service implementation can ignored with the .openapi-generator-ignore file
+// and updated with the logic required for the API.
+type DefaultApiServicer interface {
+	ScheduleGet(context.Context) (ImplResponse, error)
+	SetModelParamsPost(context.Context, model.ModelParameters) (ImplResponse, error)
+}
